[package]
name = "lau-ergodic-theory"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-ergodic-theory"
description = "Ergodic theory library: measure-preserving transformations, Birkhoff's theorem, mixing, Kolmogorov-Sinai entropy, Lyapunov exponents, and agent behavior prediction"

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
approx = "0.5"

[dev-dependencies]
